@@ -2,6 +2,8 @@
  * Leading/trailing spaces in note titles are now ignored when making links
    to such notes. This means that creating a link titled "my note" to a note
    called "my note  " now works properly.
+ * Leading/trailing spaces and newlines in note titles and contents are now
+   stripped out when exporting to CSV.
  * Fixed a bug in which clicking the "export" link when the current note was
    unsaved did not open the export pulldown.
 
